# stream-iot

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: deploy-docker-image.yml  deploy-terraform-state-bucket.yml  deploy-terraform.yml  on-pull-request-terraform.yml  push-docker-image.yml
airflow/: README.md  pv-logs.yaml  pvc-logs.yaml  values.yaml
dags/: consumer.py  producer.py
kafka/: README.md  values-kafka.yaml  values-strimzi.yaml
monitoring/: README.md  values.yaml
python/: Dockerfile  README.md  pyproject.toml
python/app/: config.py  consumer.py  producer.py
terraform/: .env.config  .terraform.lock.hcl  README.md  main.auto.tfvars  main.tf  providers.tf  variables.tf
terraform/modules/aks/: main.tf  variables.tf
terraform/modules/blob/: main.tf  variables.tf
terraform/modules/container-registry/: main.tf  variables.tf
terraform/modules/cosmosdb/: main.tf  variables.tf
terraform/modules/keyvault/: main.tf  variables.tf
terraform/modules/service-principals/: main.tf  variables.tf
terraform/modules/write-to-keyvault/: main.tf  variables.tf
