[tool.poetry]
name = "floapp001"
version = "0.0.1"
description = "Python code belonging to the app called floapp001."
authors = ["Florian Maas <fpgmaas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
confluent-kafka = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"
pytest = "7.4.0"
pytest-cov = "4.1.0"